# percipio-cpp-trainings

functions-1/: README.md  compile_run.sh
functions-1/vid01/src/: CMakeLists.txt  main.cpp
functions-1/vid01/src/lib/: default_values.cpp  default_values.hpp
functions-1/vid02/src/: CMakeLists.txt  main.cpp
functions-1/vid02/src/lib/: return_values.cpp  return_values.hpp
functions-1/vid03/src/: CMakeLists.txt  main.cpp
functions-1/vid03/src/lib/: return_values.hpp
functions-1/vid04/src/: CMakeLists.txt  main.cpp
functions-1/vid04/src/lib/: function_overloading.cpp  function_overloading.hpp
functions-1/vid06/src/: CMakeLists.txt  main.cpp
functions-1/vid06/src/lib/: function_overloading.cpp  return_values.tpp
functions-1/vid06/src/lib/header_files/: return_values.hpp
functions-1/vid_headers/src/: CMakeLists.txt  main.cpp
functions-1/vid_headers/src/include/return_values/: return_values.hpp
functions-1/vid_headers/src/lib/overloading/: function_overloading.cpp
getting-started-with-pointers/: README.md  compile_run_make.sh  compile_run_ninja.sh
getting-started-with-pointers/vid01/src/: CMakeLists.txt  main.cpp
getting-started-with-pointers/vid02/src/: CMakeLists.txt  main.cpp
getting-started-with-pointers/vid03/src/: CMakeLists.txt  main.cpp
getting-started-with-pointers/vid04/src/: CMakeLists.txt  main.cpp
getting-started-with-pointers/vid05/src/: CMakeLists.txt  main.cpp
getting-started-with-pointers/vid06/src/: CMakeLists.txt  main  main.cpp
